fixed twips rounding error in calculation b=52135 r=buster